Message sending in the server is made in a separate thread to allow the handling of the current incoming message to close.